fix: 통계 기능 수정 및 오류 수정(NLP, 사용자화 제외 구현완료)